hw12_13_14_15_16_calendar/deployments/k8s/manifests/net/calendar-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f calendar-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    app: calendar
  name: calendar
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8081
    - name: "8889"
      port: 8889
      targetPort: 8082
  selector:
    app: calendar
