hw12_13_14_15_16_calendar/deployments/k8s/manifests/net/calendar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: calendar
                port:
                  number: 8888
